--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,8 +3,8 @@ name: github pages
 on:
   push:
     branches: [ main ]
-  schedule:
-    - cron: 30 * * * *
+#  schedule:
+#    - cron: 30 * * * *
 
 jobs:
   build:
