--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-i18next": "^11.16.2"
+    "react-i18next": "^11.16.2",
+    "slug": "^5.3.0",
+    "translate-google": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.43",
