--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "google-spreadsheet": "^3.2.0",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -20,12 +21,15 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
     "slug": "^5.3.0",
-    "translate-google": "^1.5.0"
+    "translate-google": "^1.5.0",
+    "vite-plugin-react-css-modules": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@vitejs/plugin-react": "^1.3.0",
+    "postcss": "^8.4.12",
+    "sugarss": "^4.0.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
   }
