--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.5.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "google-spreadsheet": "^3.2.0",
